--- a/public/package.json
+++ b/public/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.4.2",
     "node-sass": "^4.9.4"
   }
 }
