Cleaned nav bar up

--- a/config.toml
+++ b/config.toml
@@ -48,8 +48,8 @@ disqusShortname = ""
       url = "#"
 
     [[params.navigation.links]]
-      name = "About"
-      url = "about"
+      name = "History"
+      url = "history"
 
     [[params.navigation.links]]
       name = "Companies"
@@ -59,6 +59,10 @@ disqusShortname = ""
       name = "Events"
       url = "events"
 
+    [[params.navigation.links]]
+      name = "Exhibits"
+      url = "exhibits"
+
     # Add custom links here by uncommenting code below. To remove links just delete
     # the [[params.navigation.links]] map associated with that link. Copy and paste
     # code below if you need more links. Buttons work in the same way.
@@ -66,14 +70,9 @@ disqusShortname = ""
     #    name = "NameOfLink"
     #    url = "UrlOfLink"
 
-    # Button Style 1
-    [[params.navigation.button1]]
-      name = "Get Started"
-      url = "blogs"
-
     # Button Style 2
-    [[params.navigation.button2]]
-      name = "Log In"
+    [[params.navigation.button1]]
+      name = "Login"
       url = "#"
 
 
