--- a/themes/H3-Theme/static/package.json
+++ b/themes/H3-Theme/static/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.2",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.4"
   }
 }
