--- a/themes/H3-Theme/static/package.json
+++ b/themes/H3-Theme/static/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.4.2",
     "jquery": "^3.3.1",
-    "node-sass": "^4.9.4"
+    "node-sass": "^4.9.4",
+    "scrollmagic": "^2.0.6"
   }
 }
