Removed unused/outdated files

--- a/themes/H3-Theme/theme.toml
+++ b/themes/H3-Theme/theme.toml
@@ -11,11 +11,4 @@ features = []
 min_version = "0.41"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Peter Maida"
